updated banner & add site img

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!--Banner-->
     <div id="quoteBox">
         <img src="resources/nailNeonSign.jpg" alt="">
-        <h1 id="neonTitle"><span id="star">✨</span> Nail Polish Color Selector</h1>
-        <h2></h2>
+        <h1 id="neonTitle"><span id="star">✨</span> Get Nailed <span id="star">✨</span></h1>
 
         <!--Quote Display-->
         <div id="display">
