update footer - add website to logo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="https://www.linkedin.com/in/dominique-mcphaul/"><img src="resources/bootstrap-icons-1.9.1/linkedin.svg" alt=""></a>
             <a href= "mailto:dominiquemcphaul@gmail.com"><img src="resources/bootstrap-icons-1.9.1/envelope-heart.svg" alt=""></a>
             <a href="https://github.com/domcphaul"><img src="resources/bootstrap-icons-1.9.1/github.svg" alt=""></a>
-            <a href=""><img src="resources/logo.png" alt=""></a>
+            <a href="https://domcphaul.github.io/portfolio/"><img src="resources/logo.png" alt=""></a>
         </div>
     </footer>
 
