updated banner img

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <!--Banner-->
-    <div id="quoteBox">
-        <img src="resources/nailNeonSign.jpg" alt="">
+    <div id="quoteBox" style="padding-top: 0px;">
+        <img src="resources/nailNeonSign.jpg" alt="" style="padding-top:0px;">
         <h1 id="neonTitle"><span id="star">✨</span> Get Nailed <span id="star">✨</span></h1>
 
         <!--Quote Display-->
